--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robofriends",
-  "homepage": "https://rodrig79.github.io/Robofriends",
+  "homepage": "https://rodrig79.github.io/robofriends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +15,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
